--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,21 @@
 
     <dependencies>
         <dependency>
-    			<groupId>net.java.dev.jna</groupId>
-    			<artifactId>jna</artifactId>
-    			<version>5.16.0</version>
-    		</dependency>
-    		<dependency>
-    			<groupId>net.java.dev.jna</groupId>
-    			<artifactId>jna-platform</artifactId>
-    			<version>5.16.0</version>
-    		</dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>5.16.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+			<version>5.16.0</version>
+		</dependency>
+        <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+		    <scope>provided</scope>
+	    </dependency>
     </dependencies>
 
     <build>
